2001-11-28  Max Horn  <max@quendi.de>

	* Info.plist.in: removed some unnecessary crap

2001-11-27  Jeff Freedman  <jeff@amy.nerble.net>

	* npctime.cc (Npc_hunger_timer): End hunger/poison if dead.
	* exult.cc: Fixed telescope display.

2001-11-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* objs.cc, msvcstuff/find_nearby.h: fixed crash in SI cheat room

2001-11-26  Jeff Freedman  <jeff@amy.nerble.net>

	* Changed version to 0.96beta1.

2001-11-26  Christian Ohm  <chr.ohm@gmx.net>
	* exult.cc: added -bg/-si command line options

2001-11-26  Max Horn  <max@quendi.de>
	* version.cc: fixed Metrowerks detection; factored out some std::endl into a single spot
	* vgafile.cc: get_frame() now checks for lower bound, too (fixing a crash)

2001-11-25 Ryan Nunn <triforce@merlin.net.au>
	 * audio/Audio.cc : Note to self, Copy and Paste not so good

2001-11-25 Ryan Nunn <triforce@merlin.net.au>
	 * version.cc : Will this ever end... Windows and MSC stuff
	 * msvcstuff/Exult.dsp : Add in the version files to the project 
	 * msvcstuff/msvc_kludges.h : Finally updated version to 0.95cvs 
	 * audio/Audio.cc : Also search for SFX flexes in the <DATA> directory.

2001-11-25  Max Horn  <max@quendi.de>

	* version.cc: added MacOS support; added Metrowerks Codewarrior to the compiler list

2001-11-25  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* version.cc: reordered the output
	* exult.cc: -v/--version outputs version info
	* fnames.h, gamedat.cc, gamewin.cc: add exult.ver and newgame.ver
	to savegames, containing the version of exult that saved the game
	and started the game, respectively.
	* Makefile.*: added version.*

2001-11-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Newfile_gump.cc: reset 'filename' in FreeSaveGameDetails
	* version.*: more namespaces, expanded linux version a bit

2001-11-24 Ryan Nunn <triforce@merlin.net.au>
	* version.* : Windows stuff and std namespace stuff.
