@@ -5,6 +5,8 @@
 %define rel      1
 %define prefix   @prefix@
 %define name	 @PACKAGE@
+%define bindir	 @bindir@
+%define datadir	 @datadir@
 
 Summary: Ultima VII Engine
 Name: %name
@@ -25,6 +27,13 @@ Docdir: %{prefix}/doc
 Exult: an implementation of the Ultima VII engine for modern Operating Systems.
 
 %changelog
+
+* Thu Nov 29 2001  Tristan Tarrant <nadir@users.sourceforge.net>
+
+- allow setting of bindir and datadir
+- build exult only (will be fixed with the addition of subpackages)
+- added README.1ST
+- optimizer flags should be set for CXXFLAGS too
 
 * Mon Jun 25 2001  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
 
@@ -55,7 +64,7 @@ Exult: an implementation of the Ultima VII engine for modern Operating Systems.
 if [ ! -f configure ]; then
   ./autogen.sh
 fi
-CFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%prefix --sysconfdir=$RPM_BUILD_ROOT/etc --disable-gimp-plugin
+CFLAGS="$RPM_OPT_FLAGS" CXXFLAGS="$RPM_OPT_FLAGS" ./configure --prefix=%prefix --bindir=%bindir --datadir=%datadir --sysconfdir=$RPM_BUILD_ROOT/etc --disable-gimp-plugin --disable-exult-studio-support --disable-tools 
 
 if [ "$SMP" != "" ]; then
   (make "MAKE=make -k -j $SMP"; exit 0)
@@ -66,16 +75,17 @@ fi
 
 %install
 rm -rf $RPM_BUILD_ROOT
-make prefix=$RPM_BUILD_ROOT%{prefix} install
+make prefix=$RPM_BUILD_ROOT%{prefix} bindir=$RPM_BUILD_ROOT%{bindir} datadir=$RPM_BUILD_ROOT%{datadir} install
 
 %clean
 rm -rf $RPM_BUILD_ROOT
 
 %files
 %defattr(-, root, root)
-%doc AUTHORS COPYING ChangeLog NEWS README FAQ
-%{prefix}/bin/*
-%{prefix}/share/exult/exult.flx
-%{prefix}/share/exult/midisfx.flx
-%{prefix}/share/exult/exult_bg.flx
-%{prefix}/share/exult/exult_si.flx
+%doc AUTHORS COPYING ChangeLog NEWS README FAQ README.1ST
+%{bindir}/*
+%{datadir}/exult/exult_bg.flx
+%{datadir}/exult/exult_si.flx
+%{datadir}/exult/midisfx.flx
+%{datadir}/exult/exult.flx
+
